correction marge collapse et taille du footer

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -33,8 +33,10 @@ main{
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  align-content: center;
+  align-content: flex-start;
   width: 100%;
+  height: 100%;
+  margin-top: 5px;
 }
 
 .Apropos_contenant_collapse{
@@ -65,13 +67,13 @@ main{
   justify-content: center;
   align-items: center;
   background-color: black;
-  height: 134px;
+  height: 234px;
   width: 100%;
   color: white;
   margin-top: 30px;
 }
 
-.Bienvenue {
+.Bienvenue, .Bienvenue_main{
   position: relative;
   display: flex;
   justify-content: center;
@@ -190,7 +192,7 @@ main{
 
 
 .logement_slideShow{
-  background-size: 100% 415px;
+  background-size: 100% 100%;
   width: 90%;
   height: 415px;
   border-radius: 25px;
